# HW13-Web

./: .gitignore  README.md  main.py  pyproject.toml
alembic/versions/: 0ac3685d7f11_init.py
src/: schemas.py
src/conf/: config.ini  config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
templates/: index.html
