[tool.poetry]
name = "fastapi auth"
version = "0.1.0"
description = "FastApi auth"
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
fastapi-mail = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
